--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -1,7 +1,11 @@
 <div id="header">
   <% if signed_in?%>
     <div class="float_l">
-      <%= link_to "+", new_admin_store_path if current_user.stores.count  != 0%>
+      <% if current_user.stores.count  == 0%>
+        <%= link_to "Create your stores now!", new_admin_store_path %>
+      <% else %>
+        <%= link_to "+", new_admin_store_path %>
+      <% end %>
       <% current_user.stores.each do |store| %>
         <%= link_to store.name, admin_store_path(store) %>
       <% end %>
