--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -12,7 +12,7 @@
     <div class="flash_box">
       <%= render 'shared/flash_messages'%>
     </div>
-    <%= render 'admin/stores/store_managing_menu'%>
+    <%= render 'admin/stores/store_managing_menu' unless (params[:controller] == "admin/stores" and params[:action] == "new")%>
     <%= yield  %>
     <div class="cleaner"></div>
   </div>
