--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -157,6 +157,7 @@ label{
   textarea#question{
     height: 10em;
     width: 100%;
+    max-width: 100%;
     box-shadow: 0px 0px 2px rgba(133, 133, 133, 0.80);
     border: 1px solid #808080;
     border-radius: 3px;
@@ -470,6 +471,18 @@ label{
   background: url("find.png") no-repeat;
   background-color: white;
   padding-left: 35px !important;
+}
+
+textarea.edit_file_content{
+  height: 500px;
+  width: 100%;
+  max-width: 100%;
+  box-shadow: 0px 0px 2px rgba(133, 133, 133, 0.80);
+  border: 1px solid #808080;
+  border-radius: 3px;
+  padding: 5px;
+  color: #444;
+  margin-bottom: 7px;
 }
 
 
