--- a/app/views/layouts/admin/_header.erb
+++ b/app/views/layouts/admin/_header.erb
@@ -2,7 +2,8 @@
   <div class="float_l">
     <%= link_to "+", new_admin_store_path if current_user.stores.count  != 0%>
     <% current_user.stores.each do |store| %>
-      <%= link_to store.name, admin_store_path(store) %>
+      <%= link_to store.name, admin_store_path(store), :id =>
+          ("active_store" if store.id.to_s == (params[:store_id] ? params[:store_id] : params[:id])) %>
     <% end %>
     </div>
   <div class="float_r">
