--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,12 +48,13 @@ label{
   left: 0;
   width: 100%;
   height: 55px;
-  background: -webkit-linear-gradient(bottom, #3D3D3D 0%, #525252 100%);
-  background: -moz-linear-gradient(bottom, #3D3D3D 0%, #525252 100%);
+  background: -webkit-linear-gradient(bottom, #666 0%, #525252 100%);
+  background: -moz-linear-gradient(bottom, #666 0%, #525252 100%);
   text-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
   text-transform: uppercase;
   font-size: 12px;
   a{
+    cursor: pointer;
     color: #aaa;
     display: block;
     float: left;
@@ -61,11 +62,50 @@ label{
     border-right: dotted 1px rgba(255, 255, 255, .1);
     border-left: dotted 1px rgba(0, 0, 0, .3);
     -webkit-transition: background-color 0.5s ease;
-    &:hover, &#active_store {
+    &:hover{
       color: white;
       background-color: #444;
     }
+  }
+}
+
+#stores_list{
+  max-width: 520px;
+  display: none;
+  text-align: left;
+  position: fixed;
+  top: 55px;
+  left: 0px;
+  padding: 10px;
+  z-index: 100;
+  background-color: #2a87a2;
+  box-shadow: 0 2px 2px 1px rgba(124, 124, 124, 0.62);
+  border: 1px solid #CCC;
+  border-top-color: #525252;
+  border-left: none;
+  border-radius: 0 0 10px 0;
+  text-shadow: #121212;
+  a{
+    margin-top: 7px;
+    padding: 3px;
+    font-family: verdana;
+    text-transform: uppercase;
+    color: #fff;
+    display: block;
+    &:hover, &#active_store{
+      border-radius: 3px;
+      background-color: #5BC0DE;
+    }
     &#active_store{
+      font-weight: bold;
+    }
+    &#new_store{
+      float: right;
+      background-color: #62C462;
+      border-radius: 3px;
+      width: 25px;
+      text-align: center;
+      padding-top: -2px;
       font-weight: bold;
     }
   }
