Add css and js editor; Attempt js to stores pages

--- a/app/views/admin/assets/edit.erb
+++ b/app/views/admin/assets/edit.erb
@@ -1,7 +1,14 @@
 <h3> Edit <%= @asset.file_file_name %></h3>
 
 <%= form_for([:admin, @store, @asset]) do |f| %>
-  <%= f.text_area :file_content, :value => @lines, :class => "edit_file_content" %>
+  <%= f.text_area :file_content, :value => @lines, :class => "edit_file_content", :id => @asset_type %>
   <br>
   <%= f.submit %>
 <% end %>
+<script>
+  var cssEditor = CodeMirror.fromTextArea(document.getElementById("<%= @asset_type %>"), {
+    lineNumbers: true,
+    mode: "<%= @asset_type %>"
+  });
+</script>
+<style>.CodeMirror {background: #f8f8f8;}</style>
