--- a/app/views/layouts/admin/_styles_&_scripts.erb
+++ b/app/views/layouts/admin/_styles_&_scripts.erb
@@ -3,4 +3,5 @@
 <script type="text/javascript" src="jquery.blend.js"></script>
 <![endif]-->
 <%= stylesheet_link_tag 'application.scss', :media => 'all' %>
+<%= stylesheet_link_tag 'editor_highlight.css', :media => 'all' %>
 <%= javascript_include_tag 'application', :media => 'all' %>
