--- a/app/views/layouts/admin/_styles_&_scripts.erb
+++ b/app/views/layouts/admin/_styles_&_scripts.erb
@@ -4,4 +4,6 @@
 <![endif]-->
 <%= stylesheet_link_tag 'application.scss', :media => 'all' %>
 <%= stylesheet_link_tag 'editor_highlight.css', :media => 'all' %>
+<%= stylesheet_link_tag 'editor_themes/editor_themes', :media => 'all' %>
+
 <%= javascript_include_tag 'application', :media => 'all' %>
