--- a/app/assets/stylesheets/editor_highlight.css
+++ b/app/assets/stylesheets/editor_highlight.css
@@ -161,3 +161,12 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
     visibility: hidden;
   }
 }
+
+/*Cusom styles*/
+
+
+.codePreview{
+    background-color: #ececec;
+    border-radius: 10px;
+    cursor: default;
+}
