--- a/app/views/admin/assets/edit.erb
+++ b/app/views/admin/assets/edit.erb
@@ -5,10 +5,158 @@
   <br>
   <%= f.submit %>
 <% end %>
+Select a theme:
+<select onchange="selectTheme()" id="select_theme">
+  <option selected>default</option>
+  <option>ambiance</option>
+  <option>blackboard</option>
+  <option>cobalt</option>
+  <option>eclipse</option>
+  <option>elegant</option>
+  <option>erlang-dark</option>
+  <option>lesser-dark</option>
+  <option>monokai</option>
+  <option>neat</option>
+  <option>night</option>
+  <option>rubyblue</option>
+  <option>twilight</option>
+  <option>vibrant-ink</option>
+  <option>xq-dark</option>
+</select>
+<a href="javascript:autoFormat()">
+   Autoformat
+</a>
+<p>Demonstration of primitive search/replace functionality. The
+keybindings (which can be overridden by custom keymaps) are:</p>
+<dl>
+  <dt>Ctrl-F / Cmd-F</dt><dd>Start searching</dd>
+  <dt>Ctrl-G / Cmd-G</dt><dd>Find next</dd>
+  <dt>Shift-Ctrl-G / Shift-Cmd-G</dt><dd>Find previous</dd>
+  <dt>Shift-Ctrl-F / Cmd-Option-F</dt><dd>Replace</dd>
+  <dt>Shift-Ctrl-R / Shift-Cmd-Option-F</dt><dd>Replace all</dd>
+</dl>
+
 <script>
-  var cssEditor = CodeMirror.fromTextArea(document.getElementById("<%= @asset_type %>"), {
+  var editor = CodeMirror.fromTextArea(document.getElementById("<%= @asset_type %>"), {
     lineNumbers: true,
-    mode: "<%= @asset_type %>"
+    lineWrapping: true,// ?
+    mode: "<%= @asset_type %>",
+    tabSize: 4,
+    indentUnit: 4,    // ?
+    indentWithTabs: true, // ?
+    onCursorActivity: function() {
+      editor.setLineClass(hlLine, null, null);
+      hlLine = editor.setLineClass(editor.getCursor().line, null, "activeLine");
+      editor.matchHighlight("CodeMirror-matchhighlight");
+    },
+    extraKeys: {
+      "F11": function(cm) {
+        setFullScreen(cm, !isFullScreen(cm));
+      },
+      "Esc": function(cm) {
+        if (isFullScreen(cm)) setFullScreen(cm, false);
+      },
+      "Ctrl-Space": "autocomplete"
+    }
+  });
+
+  CodeMirror.commands.autocomplete = function(cm) {
+    CodeMirror.simpleHint(cm, CodeMirror.javascriptHint);
+  }
+
+  var hlLine = editor.setLineClass(0, "activeLine");
+  
+  var input = document.getElementById("select_theme");
+  function selectTheme() {
+    var theme = input.options[input.selectedIndex].innerHTML;
+    editor.setOption("theme", theme);
+  }
+
+  function autoFormat() {
+    var lineCount = parseInt(j(".CodeMirror-gutter-text pre:last").html());
+    editor.autoFormatRange({ch:0, line:0}, {ch:0, line:lineCount});
+  }
+
+  function isFullScreen(cm) {
+    return /\bCodeMirror-fullscreen\b/.test(cm.getWrapperElement().className);
+  }
+  function winHeight() {
+    return window.innerHeight || (document.documentElement || document.body).clientHeight;
+  }
+  function setFullScreen(cm, full) {
+    var wrap = cm.getWrapperElement(), scroll = cm.getScrollerElement();
+    if (full) {
+      wrap.className += " CodeMirror-fullscreen";
+      scroll.style.height = winHeight() + "px";
+      document.documentElement.style.overflow = "hidden";
+    } else {
+      wrap.className = wrap.className.replace(" CodeMirror-fullscreen", "");
+      scroll.style.height = "";
+      document.documentElement.style.overflow = "";
+    }
+    cm.refresh();
+  }
+  CodeMirror.connect(window, "resize", function() {
+    var showing = document.body.getElementsByClassName("CodeMirror-fullscreen")[0];
+    if (!showing) return;
+    showing.CodeMirror.getScrollerElement().style.height = winHeight() + "px";
   });
 </script>
-<style>.CodeMirror {background: #f8f8f8;}</style>
+
+<style>
+  .CodeMirror {background: #f8f8f8;}
+  .activeLine {background: rgba(95, 95, 95, 0.14) !important;}
+  .CodeMirror-fullscreen {
+    display: block;
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    z-index: 9999;
+  }
+  .CodeMirror-completions {
+    position: absolute;
+    z-index: 10;
+    overflow: hidden;
+    -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+    -moz-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+    box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+  }
+  .CodeMirror-completions select {
+    background: #fafafa;
+    outline: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font-family: monospace;
+  }
+  span.CodeMirror-matchhighlight { background: rgba(225, 240, 215, 0.83)}
+  .CodeMirror-focused span.CodeMirror-matchhighlight { background: #b8d5b0; !important }
+
+  .CodeMirror-dialog {
+    position: relative;
+  }
+
+  .CodeMirror-dialog > div {
+    position: absolute;
+    top: 0; left: 0; right: 0;
+    background: white;
+    border-bottom: 1px solid #eee;
+    z-index: 15;
+    padding: .1em .8em;
+    overflow: hidden;
+    color: #333;
+  }
+
+  .CodeMirror-dialog input {
+    border: none;
+    outline: none;
+    background: transparent;
+    width: 20em;
+    color: inherit;
+    font-family: monospace;
+  }
+
+  .CodeMirror-dialog button {
+    font-size: 70%;
+  }
+</style>
