--- a/app/views/admin/assets/edit.erb
+++ b/app/views/admin/assets/edit.erb
@@ -1,40 +1,53 @@
-<h3> Edit <%= @asset.file_file_name %></h3>
-
+<div id="editor_header">
+  <%= @asset.file_file_name %>
+  <div id="help">
+    <div id="help_window_toggler" class="editor_icon"></div>
+      <div id="help_window">
+      <p>Hotkeys</p><br>
+        Ctrl-F / Cmd-F - Start searching<br>
+        Ctrl-G / Cmd-G - Find next     <br>
+        Shift-Ctrl-G / Shift-Cmd-G - Find previous  <br>
+        Shift-Ctrl-F / Cmd-Option-F - Replace        <br>
+        Shift-Ctrl-R / Shift-Cmd-Option-F - Replace all   <br>
+    </div>
+  </div>
+  <div id="settings">
+    <div id="settings_window_toggler" class="editor_icon"></div>
+    <div id="settings_window">
+      Select a theme:
+      <select onchange="selectTheme()" id="select_theme">
+        <option value="default">default</option>
+        <option value="ambiance">ambiance</option>
+        <option value="blackboard">blackboard</option>
+        <option value="cobalt">cobalt</option>
+        <option value="eclipse">eclipse</option>
+        <option value="elegant">elegant</option>
+        <option value="erlang-dark">erlang-dark</option>
+        <option value="lesser-dark">lesser-dark</option>
+        <option value="monokai">monokai</option>
+        <option value="neat">neat</option>
+        <option value="night">night</option>
+        <option value="rubyblue">rubyblue</option>
+        <option value="twilight">twilight</option>
+        <option value="vibrant-ink">vibrant-ink</option>
+        <option value="xq-dark">xq-dark</option>
+      </select><br>
+      <input type="checkbox" id="ln" onchange="toggleLN(this)"> Line numbers<br>
+      Font size: <br>
+      Line Count: <br>
+    </div>
+  </div>
+</div>
 <%= form_for([:admin, @store, @asset]) do |f| %>
-  <%= f.text_area :file_content, :value => @lines, :class => "edit_file_content", :id => @asset_type %>
-  <br>
-  <%= f.submit %>
+  <%= f.text_area :file_content, :value => @lines, :class => "editor_content", :id => @asset_type %>
+  <div id="editor_footer">
+    <%= f.submit "Save & close", :class => "float_r" -%>
+    <div class="button grey float_r" id="editor_quick_save" onclick="quick_save('<%= @store.id %>', '<%= @asset.id %>')">Quick save</div>
+    <div id="message" class="float_r"></div>
+    <a href="javascript:autoFormat()" class="button grey" style="margin-left: 33%;">Autoformat</a>
+    <%= link_to "Cancel", admin_store_asset_path(@store, @asset), :class => "button grey float_l", :id => "editor_cancel" %>
+  </div>
 <% end %>
-Select a theme:
-<select onchange="selectTheme()" id="select_theme">
-  <option selected>default</option>
-  <option>ambiance</option>
-  <option>blackboard</option>
-  <option>cobalt</option>
-  <option>eclipse</option>
-  <option>elegant</option>
-  <option>erlang-dark</option>
-  <option>lesser-dark</option>
-  <option>monokai</option>
-  <option>neat</option>
-  <option>night</option>
-  <option>rubyblue</option>
-  <option>twilight</option>
-  <option>vibrant-ink</option>
-  <option>xq-dark</option>
-</select>
-<a href="javascript:autoFormat()">
-   Autoformat
-</a>
-<p>Demonstration of primitive search/replace functionality. The
-keybindings (which can be overridden by custom keymaps) are:</p>
-<dl>
-  <dt>Ctrl-F / Cmd-F</dt><dd>Start searching</dd>
-  <dt>Ctrl-G / Cmd-G</dt><dd>Find next</dd>
-  <dt>Shift-Ctrl-G / Shift-Cmd-G</dt><dd>Find previous</dd>
-  <dt>Shift-Ctrl-F / Cmd-Option-F</dt><dd>Replace</dd>
-  <dt>Shift-Ctrl-R / Shift-Cmd-Option-F</dt><dd>Replace all</dd>
-</dl>
 
 <script>
   var editor = CodeMirror.fromTextArea(document.getElementById("<%= @asset_type %>"), {
@@ -62,14 +75,28 @@ keybindings (which can be overridden by custom keymaps) are:</p>
 
   CodeMirror.commands.autocomplete = function(cm) {
     CodeMirror.simpleHint(cm, CodeMirror.javascriptHint);
-  }
+  };
 
   var hlLine = editor.setLineClass(0, "activeLine");
-  
+
+  if("<%= @theme %>" != "default"){
+    j("#select_theme option[value='default']").removeAttr("selected");
+    j("#select_theme option[value='<%= @theme %>']").attr("selected", "selected");
+  }
+  editor.setOption("theme", "<%= @theme %>");
   var input = document.getElementById("select_theme");
   function selectTheme() {
     var theme = input.options[input.selectedIndex].innerHTML;
     editor.setOption("theme", theme);
+    j.get("/change_editor_theme/" + theme);
+  }
+
+  if("<%= @ln %>" == "false"){
+    editor.setOption("lineNumbers", false);
+  }
+  function toggleLN(target){
+    editor.setOption("lineNumbers", target.checked);
+    j.get("/change_ln/" + target.checked);
   }
 
   function autoFormat() {
