--- a/app/views/layouts/admin/_styles_&_scripts.erb
+++ b/app/views/layouts/admin/_styles_&_scripts.erb
@@ -3,7 +3,10 @@
 <script type="text/javascript" src="jquery.blend.js"></script>
 <![endif]-->
 <%= stylesheet_link_tag 'application.scss', :media => 'all' %>
-<%= stylesheet_link_tag 'editor_highlight.css', :media => 'all' %>
-<%= stylesheet_link_tag 'editor_themes/editor_themes', :media => 'all' %>
-
 <%= javascript_include_tag 'application', :media => 'all' %>
+
+<% if params[:controller] == "admin/assets" %>
+  <%= javascript_include_tag 'lib/editor_highlight', :media => 'all' %>
+  <%= stylesheet_link_tag 'editor/editor_highlight', :media => 'all' %>
+  <%= stylesheet_link_tag 'editor/editor_themes', :media => 'all' %>
+<% end %>
