--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
 <% @opened_stores.each do |store|%>
   <a class="home_store_box" href="<%= stores_store_catalog_path(store) %>">
     <%= store.name %>
-    <%= image_tag store.capture%>
+    <%= image_tag store.capture, :alt => store.name%>
   </a>
 <% end %>
 
