--- a/app/views/admin/assets/index.erb
+++ b/app/views/admin/assets/index.erb
@@ -12,22 +12,60 @@
   <div class="assets_box">
     <div class="assets_box_title">Stylesheets</div>
     <% @stylesheets.each do |stylesheet| %>
-      <div class="asset_item">
-        <%= link_to stylesheet.file_file_name, admin_store_asset_path(@store, stylesheet)%>
-        <%= link_to image_tag("icons/delete.png"), admin_store_asset_path(@store, stylesheet), :method => :delete, :confirm => "Are You sure?", :class => "link-icon" %>
-        <%= link_to image_tag("icons/pencil.png") , edit_admin_store_asset_path(@store, stylesheet), :class => "link-icon" %><br>
-      </div>
+      <%= link_to_function stylesheet.file_file_name, "loadAsset(#{@store.id}, #{stylesheet.id})", :class => "asset_item", :id => "asset_#{stylesheet.id}" %>
     <% end %>
   </div>
   <div class="assets_box">
     <div class="assets_box_title">Javascripts</div>
     <% @javascripts.each do |javascript| %>
-      <div class="asset_item">
-        <%= link_to javascript.file_file_name, admin_store_asset_path(@store, javascript)%>
-        <%= link_to image_tag("icons/delete.png"), admin_store_asset_path(@store, javascript), :method => :delete, :confirm => "Are You sure?", :class => "link-icon" %>
-        <%= link_to image_tag("icons/pencil.png"), edit_admin_store_asset_path(@store, javascript), :class => "link-icon" %><br>
-      </div>
+      <%= link_to_function javascript.file_file_name, "loadAsset(#{@store.id}, #{javascript.id})", :class => "asset_item", :id => "asset_#{javascript.id}" %>
     <% end %>
   </div>
   <div class="cleaner"></div>
 </div>
+<div id="assets_ide">
+  <div id="editor_header">
+    <span class="editor_title">No files are open</span>
+    <div id="help_window_icon" class="editor_icon"></div>
+    <div id="settings_window_icon" class="editor_icon"></div>
+  </div>
+  <div id="editor_right_menu">
+    <div id="editor_menu_close">X</div>
+    <div id="help_window" class="editor_right_window">
+      <p>Hotkeys</p><br>
+      Ctrl-F / Cmd-F - Start searching<br>
+      Ctrl-G / Cmd-G - Find next     <br>
+      Shift-Ctrl-G / Shift-Cmd-G - Find previous  <br>
+      Shift-Ctrl-F / Cmd-Option-F - Replace        <br>
+      Shift-Ctrl-R / Shift-Cmd-Option-F - Replace all   <br>
+    </div>
+    <div id="settings_window" class="editor_right_window">
+      Select a theme:
+      <select id="select_theme">
+        <option value="default">default</option>
+        <option value="ambiance">ambiance</option>
+        <option value="blackboard">blackboard</option>
+        <option value="cobalt">cobalt</option>
+        <option value="eclipse">eclipse</option>
+        <option value="elegant">elegant</option>
+        <option value="erlang-dark">erlang-dark</option>
+        <option value="lesser-dark">lesser-dark</option>
+        <option value="monokai">monokai</option>
+        <option value="neat">neat</option>
+        <option value="night">night</option>
+        <option value="rubyblue">rubyblue</option>
+        <option value="twilight">twilight</option>
+        <option value="vibrant-ink">vibrant-ink</option>
+        <option value="xq-dark">xq-dark</option>
+      </select><br>
+      <input type="checkbox" id="editor_toggle_ln"> Line numbers<br>
+      Font size: <br>
+      Line Count: <br>
+    </div>
+  </div>
+</div>
+
+<script>
+  theme = "<%= @editor_theme %>";
+  ln = "<%= @editor_ln %>";
+</script>
