--- a/app/views/admin/assets/index.erb
+++ b/app/views/admin/assets/index.erb
@@ -26,21 +26,29 @@
 <div id="assets_ide">
   <div id="editor_header">
     <span class="editor_title">No files are open</span>
-    <div id="help_window_icon" class="editor_icon"></div>
-    <div id="settings_window_icon" class="editor_icon"></div>
+    <div id="full_screen_icon" class="editor_icon" title="Full screen"></div>
+    <div id="help_window_icon" class="editor_icon right_window_opener" title="Help"></div>
+    <div id="settings_window_icon" class="editor_icon right_window_opener" title="Settings"></div>
+    <div id="arrow_redo_icon" class="editor_icon" title="Redo"></div>
+    <div id="arrow_undo_icon" class="editor_icon" title="Undo"></div>
   </div>
   <div id="editor_right_menu">
-    <div id="editor_menu_close">X</div>
+    <div id="right_editor_menu_close"></div>
     <div id="help_window" class="editor_right_window">
-      <p>Hotkeys</p><br>
-      Ctrl-F / Cmd-F - Start searching<br>
-      Ctrl-G / Cmd-G - Find next     <br>
-      Shift-Ctrl-G / Shift-Cmd-G - Find previous  <br>
-      Shift-Ctrl-F / Cmd-Option-F - Replace        <br>
-      Shift-Ctrl-R / Shift-Cmd-Option-F - Replace all   <br>
+      <h3>Hotkeys</h3>
+      <span class="hotkeys">Ctrl-S</span> - Quick save<br>
+      <span class="hotkeys">Ctrl-Z</span> - Undo<br>
+      <span class="hotkeys">Shift-Ctrl-Z</span> - Redo<br>
+      <span class="hotkeys">Ctrl-F</span> - Start searching<br>
+      <span class="hotkeys">Ctrl-G</span> - Find next<br>
+      <span class="hotkeys">Shift-Ctrl-G</span> - Find previous<br>
+      <span class="hotkeys">Shift-Ctrl-F</span> - Replace<br>
+      <span class="hotkeys">Shift-Ctrl-R</span> - Replace all<br>
+      <span class="hotkeys">F11</span> - Toggle full screen<br>
+      <span class="hotkeys">Esc</span> - Exit full screen<br>
     </div>
     <div id="settings_window" class="editor_right_window">
-      Select a theme:
+      <span class="title">Select a theme:</span>
       <select id="select_theme">
         <option value="default">default</option>
         <option value="ambiance">ambiance</option>
@@ -58,9 +66,8 @@
         <option value="vibrant-ink">vibrant-ink</option>
         <option value="xq-dark">xq-dark</option>
       </select><br>
-      <input type="checkbox" id="editor_toggle_ln"> Line numbers<br>
-      Font size: <br>
-      Line Count: <br>
+      <span class="title">Line numbers:</span> <input type="checkbox" id="editor_toggle_ln"><br>
+      <span class="title">Font size:</span> <input type="range" min="9" max="15" value="10" id="editor_font_size"><br>
     </div>
   </div>
 </div>
@@ -68,4 +75,5 @@
 <script>
   theme = "<%= @editor_theme %>";
   ln = "<%= @editor_ln %>";
+  font_size = "<%= @editor_font_size %>"
 </script>
